# cppCMakeProjectSetup

./: .gitignore  CMakeLists.txt  README.md
include/: my_header.h
src/: main.cpp  my_header.cpp
tests/: CMakeLists.txt  test_my_code.cpp
